--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!-- Зависимость для Selenium WebDriver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>LATEST</version> <!-- Укажите здесь последнюю доступную версию Selenium -->
+        </dependency>
+    </dependencies>
+
 </project>
