--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>LATEST</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>LATEST</version> <!-- Укажите актуальную версию RestAssured -->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
