--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.1</version>
                 <configuration>
-                    <includes>
-                        <include>org/example/GetParamTest.java</include>
-                        <include>org/example/AuthorizationTest.java</include>
-                    </includes>
+                    <groups>org.example.AuthorizationTests</groups>
                 </configuration>
             </plugin>
         </plugins>
